# coldfront-plugin-cloud

./: .gitignore  .pre-commit-config.yaml  README.md  Vagrantfile  pyproject.toml  requirements.txt  setup.cfg  test-requirements.txt
.github/workflows/: bruh.yaml  pre-commit.yaml  test-functional-keycloak.yaml  test-functional-microshift.yaml  test-functional-microstack.yaml  test-py38-functional-devstack-mini.yaml  test-py38-functional-devstack.yaml  test-py39-functional-microshift.yaml  test-py39-functional-microstack.yaml  test-py39-functional.yaml  test-py39-unit.yaml  test-unit.yaml
ci/: devstack-config-ip.sh  devstack-mapping.json  devstack-test-oidc.py  devstack.sh  devstack_esi.sh  devstack_mini.sh  microshift.sh  microstack.sh  radosgw.sh  run_functional_tests.sh  run_functional_tests_esi.sh  run_functional_tests_keycloak.sh  run_functional_tests_openshift.sh  run_functional_tests_openstack.sh  run_functional_tests_openstack_mini.sh  run_unit_tests.sh  setup-keycloak.sh  setup-oc-client.sh  setup-ubuntu.sh  setup.sh  test.sh
src/: local_settings.py
src/coldfront_plugin_cloud/: __init__.py  apps.py  attributes.py  base.py  config.py  esi.py  kc_client.py  moc_openshift.py  openshift.py  openshift_vm.py  openstack.py  signals.py  tasks.py  urls.py  usage_models.py  utils.py
src/coldfront_plugin_cloud/acct_mgt/: app.py  defaults.py  exceptions.py  moc_openshift.py  wsgi.py
src/coldfront_plugin_cloud/api/: serializers.py
src/coldfront_plugin_cloud/management/commands/: add_esi_resource.py  add_openshift_resource.py  add_openstack_resource.py  add_quota_to_resource.py  calculate_storage_gb_hours.py  cloud_quotas.py  convert_swift_quota_to_gib.py  count_gpu_usage.py  fetch_daily_billable_usage.py  update_eula.py  (+7 more)
src/coldfront_plugin_cloud/models/: quota_models.py  usage_models.py
src/coldfront_plugin_cloud/tests/: base.py
src/coldfront_plugin_openstack/: __init__.py  apps.py  attributes.py  base.py  config.py  keycloak.py  openshift.py  openstack.py  signals.py  tasks.py  utils.py
src/coldfront_plugin_openstack/tests/: base.py  test_resource_allocation.py
(+41 files in other folders)
