[metadata]
name = coldfront_plugin_cloud
version = 0.1.0
author = Kristi Nikolla
author_email = knikolla@bu.edu
description = OpenStack resource allocation plugin for ColdFront
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/knikolla/coldfront-plugin-openstack
project_urls =
    Bug Tracker = https://github.com/knikolla/coldfront-plugin-openstack/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    coldfront @ git+https://github.com/knikolla/coldfront@coldfront_plugin_cloud_urls#egg=coldfront
    djangorestframework
    mozilla-django-oidc
    python-cinderclient
    python-keystoneclient
    python-memcached == 1.59
    python-novaclient
    python-neutronclient
    python-swiftclient

[options.packages.find]
where = src
