[metadata]
name = coldfront_plugin_cloud
version = 0.1.0
author = Kristi Nikolla
author_email = knikolla@bu.edu
description = OpenStack resource allocation plugin for ColdFront
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/knikolla/coldfront-plugin-openstack
project_urls =
    Bug Tracker = https://github.com/knikolla/coldfront-plugin-openstack/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.11
install_requires =
    nerc_rates @ git+https://github.com/CCI-MOC/nerc-rates@v1.0.0
    boto3
    kubernetes
    openshift
    coldfront >= 1.1.0
    python-cinderclient
    python-keystoneclient
    python-novaclient
    python-neutronclient
    python-swiftclient
    requests < 3.0
    simplejson < 4.0
    pandas
    pyarrow
    pytz

[options.packages.find]
where = src
